workload/services/backups-http-server/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backups-http-server
spec:
  selector:
    app: backups-http-server
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
